--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -60,10 +60,10 @@
   --input-border: #353b44;
   --button-bg: #20242a;
   --button-text: #f5f7fa;
-  --button-primary-bg: #d9e0ea;
-  --button-primary-hover: #eef3f9;
+  --button-primary-bg: #c8d0da;
+  --button-primary-hover: #d9e0ea;
   --button-primary-text: #111315;
-  --submit-bg: #f5f7fa;
+  --submit-bg: #c8d0da;
   --submit-text: #111315;
   --danger-text: #ff8c86;
   --enabled-text: #72c596;
